# MetalCppApp

./: .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh
src/: application.cpp  application.h  main.cpp  metal_impl.cpp  platform.hpp  platform.mm  renderer.cpp  renderer.h  renderer.hpp  shaders.metal
src/os/: bridge.h  bridge.mm  metal.cpp  metal.h
